Login signup successfull

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomAccess">
         <activity
-            android:name=".userRegister"
+            android:name=".Starter"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".userRegister"
+            android:exported="false">
         </activity>
         <activity
             android:name=".userLogin"
@@ -34,7 +37,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="false">
-
         </activity>
     </application>
 
