--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomAccess">
         <activity
+            android:name=".MyRooms"
+            android:exported="false" />
+        <activity
             android:name=".userRoomAccess"
             android:exported="false" />
         <activity
@@ -27,7 +30,7 @@
         </activity>
         <activity
             android:name=".userRegister"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".userLogin"
             android:exported="false" />
@@ -39,7 +42,7 @@
             android:exported="false" />
         <activity
             android:name=".Home"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
