--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomAccess">
         <activity
+            android:name=".act_createRoom"
+            android:exported="false" />
+        <activity
             android:name=".MyRooms"
             android:exported="false" />
         <activity
